[project]
name = "miminet-front"
version = "0.1.0"
description = "Miminet front-end Flask application."
requires-python = ">=3.11,<3.13"
dependencies = [
    "Flask==3.1.2",
    "Flask-Admin==2.0.1",
    "Flask-Cors==6.0.2",
    "Flask-JWT-Extended==4.7.1",
    "Flask-Login==0.6.3",
    "Flask-Migrate==4.1.0",
    "Flask-SQLAlchemy==3.1.1",
    "Jinja2==3.1.6",
    "Mako>=1.3.11",
    "MarkupSafe==3.0.2",
    "Pillow==11.3.0",
    "PySocks==1.7.1",
    "SQLAlchemy==2.0.43",
    "Werkzeug==3.1.3",
    "alembic==1.16.5",
    "beautifulsoup4==4.13.5",
    "cachecontrol>=0.14",
    "celery==5.5.3",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.3",
    "click==8.1.8",
    "colorama==0.4.6",
    "dpkt==1.9.8",
    "google==3.0.0",
    "google-auth==2.40.3",
    "google-auth-oauthlib==1.2.2",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "importlib-resources==6.5.2",
    "itsdangerous==2.2.0",
    "jsonschema==4.25.1",
    "kombu==5.5.4",
    "oauthlib==3.3.1",
    "psycopg2-binary==2.9.10",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "rsa==4.9.1",
    "six==1.17.0",
    "soupsieve==2.8",
    "urllib3==2.5.0",
    "uWSGI>=2.0",
    "vine==5.1.0",
    "wcwidth==0.2.13",
    "websocket-client==1.8.0",
    "wsproto==1.2.0",
    "wtforms==3.2.1",
    "zipp==3.23.0",
]

[project.optional-dependencies]
test = [
    "pytest==8.4.2",
    "pytest-mock==3.15.1",
    "selenium",
]

[tool.uv]
package = false
